[package]
name = "key_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
logical_expr ={ git = "https://github.com/s3r4f1n/logical_expr" }
